# PangaeaTracking

./: .gitignore  CMakeLists.txt
cmake/modules/: FindLMDB.cmake
include/main_engine/rendering/: DepthBuffer.h
include/main_engine/tracker/: FeaturePyramid.h  ImagePyramid.h  Mesh.h  MeshData.h  MeshIO.h  MeshPyramid.h  OptimizationStrategy.h  residual.h  residual_util.h
include/main_engine/utils/: global.h
